--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,11 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <!-- <a class="nav-link" href="/iCoderBootstrap/">Home <span class="sr-only">(current)</span></a> -->  
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/demoBlog/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <!-- <a class="nav-link" href="/iCoderBootstrap/about.html">About</a> -->
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="/demoBlog/about.html">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -48,7 +48,7 @@
                 </li>
                 <li class="nav-item active">
                     <!-- <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact Us</a> -->
-                    <a class="nav-link" href="/contact.html">Contact Us</a>
+                    <a class="nav-link" href="/demoBlog/contact.html" (current)>Contact Us</a>
                 </li>
 
 
